[package]
name = "raddio"
version = "0.1.0"
edition = "2024"
description = "A minimal terminal launcher with a clean UI."
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
edtui = "0.11.3"
json5 = "1"
ratatui = "0.30.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
unicode-width = "0.2"
